--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@prisma/extension-accelerate": "^2.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lint-staged": "^16.1.2",
     "lucide-react": "^0.523.0",
     "next": "15.3.4",
     "react": "^19.0.0",
